--- a/requirements.txt
+++ b/requirements.txt
@@ -30,7 +30,7 @@ python-editor==1.0.3
 pytz==2018.9
 singledispatch==3.4.0.3
 six==1.12.0
-SQLAlchemy==1.2.15
+SQLAlchemy>=1.3.0
 visitor==0.1.3
 Werkzeug==0.15.3
 WTForms==2.2.1
